--- a/src/app/admin/productlist/productlist.component.html
+++ b/src/app/admin/productlist/productlist.component.html
@@ -1,1 +1,32 @@
-<p>productlist works!</p>
+<h3 *ngIf="productsStatus" class="text-center text-secondary mt-5">No products in the list</h3>
+
+<div *ngIf="!productsStatus" class="table-responsive">
+    <table class="table text-center">
+        <thead>
+            <tr>
+                <th>ProductID</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Description</th>
+                <th>Image</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let product of products">
+
+                <th>{{product.productid}}</th>
+                <td>{{product.productname}}</td>
+                <td>{{product.productprice}}</td>
+                <td>{{product.productdescription}}</td>
+                
+                <td>
+                    <img src={{product.productimage}} width="150px" height="200px" alt="" class="d-block mx-auto image">
+                </td>
+
+                <td><button type="submit" class="btn btn-primary">Edit</button></td>
+                <td><button type="submit" class="btn btn-danger">Remove</button></td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
