--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,11 @@
-<div class="footer-div5 footer-expand-sm mt-5">
+<div class="footer-div5 footer-expand-sm mt-3" style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20190221/ourmid/pngtree-texture-geometric-black-metal-gradient-image_17809.jpg')">
+    <!-- ../../assets/Footer-background.jpg -->
     <div class="div-col-1">
         <section>
             <ul style="list-style: none;"> 
                 <li><h3 style="font-weight: bold;"><a href="#" style="text-decoration: none;color: white;"> MY ACCOUNT </a> </h3></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Orders</a></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Returns/RefundsReturns/Refunds</a></li>
+                <li><a href="#" style="text-decoration: none;color: white;">Returns&Refunds</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Track Order</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Frequently Asked Questions</a></li>
             </ul>  
@@ -46,10 +47,10 @@
     <div class="div-col-4">
         <section>
             <ul  style="list-style: none;">
-                <li><h3  > <a href="#" style="font-weight: bold;text-decoration: none;color: white;"> SOCIAL</a></h3></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Facebook</a></li>
-                <li><a href="#"style="text-decoration: none;color: white;">Twitter</a></li>
-                <li><a href="#"style="text-decoration: none;color: white;">YouTube</a></li>
+                <li><h3> <a href="#" style="font-weight: bold;text-decoration: none;color: white;"> SOCIAL</a></h3></li>
+                <li><a href="https://www.facebook.com/campaign/landing.php?&campaign_id=973072070&extra_1=s%7Cc%7C256707825066%7Ce%7Cfb%20login%7C&placement=&creative=256707825066&keyword=fb%20login&partner_id=googlesem&extra_2=campaignid%3D973072070%26adgroupid%3D54006269171%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-320262102914%26loc_physical_ms%3D1007740%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=Cj0KCQjw0oCDBhCPARIsAII3C_Eyb-KOPHXNLlql5XA8hMS0tK1qB7tKchK_XB3jmKFp4QFtG0YMffQaAo3vEALw_wcB" style="text-decoration: none;color: white;"><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/?lang=en"style="text-decoration: none;color: white;"><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li><a href="https://www.youtube.com/"style="text-decoration: none;color: white;"><i class="fab fa-youtube fa-2x"></i></a></li>
             </ul> 
         </section> 
     </div>
