--- a/src/app/navbar1/navbar1.component.html
+++ b/src/app/navbar1/navbar1.component.html
@@ -1,8 +1,10 @@
-<div class="navbar1" >
-    <nav class="navbar navbar-expand-lg navbar-inverse navbar-light"  style="background-color: #5DA2D5;font-family: 'Amita', cursive;color:white;"> 
+ <div class="navbar1" > 
+   <!-- background:linear-gradient(to right, red , yellow) -->
+    <nav class="navbar navbar-expand-lg  navbar-inverse navbar-light" role="navigation"  style="background: linear-gradient(to bottom, #ff66ff 0%, #ff99cc 100%);font-family: 'Amita', cursive;color:white;"> 
       <div class="container-fluid" >
+        <!-- #5DA2D5 -->
         <!-- <svg height="512" viewBox="0 0 128 128" width="512" xmlns="http://www.w3.org/2000/svg" id="fi_4017946"><g id="Circle_Grid" data-name="Circle Grid"><circle cx="64" cy="64" fill="#ef5261" r="64"></circle></g><g id="icon"><circle cx="53.659" cy="53.653" fill="#69b0ee" r="28.604"></circle><path d="m82.263 74.395-7.869 7.869-6.705-3.538 11.036-11.036z" fill="#575b6d"></path><path d="m31.986 31.973a30.654 30.654 0 1 0 43.352.013 30.654 30.654 0 0 0 -43.352-.013zm40.578 40.578a26.731 26.731 0 1 1 0-37.79 26.742 26.742 0 0 1 0 37.79z" fill="#575b6d"></path><path d="m72.217 82.9 19.894 19.894a7.55 7.55 0 1 0 10.677-10.677l-19.894-19.899z" fill="#f6b863"></path><path d="m83.12 71.316-11.8 11.8a1.9 1.9 0 0 0 2.68 2.684l11.8-11.8a1.9 1.9 0 0 0 -2.681-2.681z" fill="#eaa14e"></path><path d="m51.837 67.279a2.657 2.657 0 1 1 -2.653-2.66 2.649 2.649 0 0 1 2.653 2.66z" fill="#414451"></path><path d="m49.183 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m63.062 67.279a2.657 2.657 0 1 1 -2.654-2.66 2.65 2.65 0 0 1 2.654 2.66z" fill="#414451"></path><path d="m60.408 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m70.185 47.415-2.775 9.159a1.317 1.317 0 0 1 -1.11.926l-19.584 2.758-2.961-15.558 25.845 1.867a.659.659 0 0 1 .585.848z" fill="#f6c863"></path><path d="m65.761 63.77h-20.318a2.2 2.2 0 1 1 0-4.4h.3l-2.929-17.083h-3.314a.659.659 0 0 1 0-1.317h3.869a.658.658 0 0 1 .649.547l3.152 18.4a.657.657 0 0 1 -.649.769h-1.078a.884.884 0 1 0 0 1.767h20.318a.659.659 0 0 1 0 1.317z" fill="#eeefee"></path><path d="m41.531 40.693v1.812a.1.1 0 0 1 -.095.095h-3.336a1 1 0 0 1 -1-1 1 1 0 0 1 1-1h3.336a.1.1 0 0 1 .095.093z" fill="#575b6d"></path><g fill="#eab54e"><path d="m62.288 55.863a.4.4 0 0 1 -.075-.007.425.425 0 0 1 -.343-.493l1.2-6.722a.425.425 0 1 1 .836.15l-1.2 6.722a.426.426 0 0 1 -.418.35z"></path><path d="m51.27 57.016a.426.426 0 0 1 -.418-.35l-1.552-8.666a.425.425 0 1 1 .836-.15l1.55 8.663a.425.425 0 0 1 -.343.493.388.388 0 0 1 -.073.01z"></path><path d="m56.676 55.863a.425.425 0 0 1 -.425-.425v-6.722a.425.425 0 0 1 .85 0v6.722a.425.425 0 0 1 -.425.425z"></path></g></g></svg> -->
-        <a class="navbar-brand" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/logo1.png" width="30px" height="30px" alt=""></a>
+        <a class="navbar-brand" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/Screenshot (364).svg" width="100px" height="40px" alt=""></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  >
           <span class="navbar-toggler-icon "></span>
@@ -11,15 +13,8 @@
           <ul class="navbar-nav ms-auto float-end ">
          
         <li class="nav-item">
-        <a class="nav-link" routerLink="home"   style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;" >Home </a>
+        <a class="nav-link" routerLink="home"  routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
         </li>
-
-
-
-
-
-
-
 
 
 
@@ -37,14 +32,14 @@
     <!-- modal -->
        <div class="modal fade"  id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
          <div class="modal-dialog">
-       <div class="modal-content">
-          <div class="modal-header" style="background-color:#AFD275;">     
+       <div class="modal-content" style="background: linear-gradient(to bottom,#ff3399 0%, #ffffcc 100%)">
+          <div class="modal-header" >     
         <h1 class="text" style="margin-left: 180px; color: black; font-family: 'Courgette', cursive;">Login</h1>
        <!-- <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5> -->
       <button type="button" class="btn " style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px; font-size: 25px;" data-bs-dismiss="modal" >X</button>
         </div> 
                      
-      <div class="modal-body" style="background-color:#AFD275;">
+      <div class="modal-body">
         <div class="row">
       <div class="col-sm-5">
          <img src="../../assets/login - latest1.jpeg" style="width: 200px; height: 500px;" alt="">
@@ -55,21 +50,21 @@
                <!----------------------------------------------------- user/admin -------------------------------------------->
     <div class="form-check form-check-inline">
      <input class="form-check-input" type="radio" name="person" id="user" value="user" required #person="ngModel" ngModel>
-        <label class="form-check-label" for="user">User</label>
+        <label class="form-check-label" for="user" style="color: black;">User</label>
          </div>
        <div class="form-check form-check-inline">
      <input class="form-check-input" type="radio" name="person" id="admin" value="admin" required #person="ngModel" ngModel>
-          <label class="form-check-label" for="admin">Admin</label>
+          <label class="form-check-label" for="admin" style="color: black;">Admin</label>
       </div>
          <!-- person validation -->     
-       <div class="text-danger" *ngIf="(person.touched || ref.submitted) && (person.errors?.required)">Please choose one</div>
+       <div class="text" style="color: red;" *ngIf="(person.touched || ref.submitted) && (person.errors?.required)">*Please choose one</div>
 
 
 
           <!------------------- username ------------------------->
   <input type="text" class="form-control mb-2" id="username" placeholder="Username" name="username" #username="ngModel" autocomplete="off" ngModel required>
      <!-------------username validations -->
-      <p *ngIf="(username.touched || ref.submitted)&&username.errors?.required" class="text-danger" >*Username required</p>
+      <p *ngIf="(username.touched || ref.submitted)&&username.errors?.required" class="text" style="color: red;" >*Username required</p>
                             
 
 
@@ -78,7 +73,7 @@
         <!---------------------password--------------------------------- -->
    <input type="password" class="form-control mb-2  " id="password" placeholder="Password "  autocomplete="off" name="password"  #password="ngModel" ngModel required>                      
      <!-- validation for password-->
-      <p *ngIf="(password.touched || ref.submitted)&&password.errors?.required" class="text-danger">*Password required</p>
+      <p *ngIf="(password.touched || ref.submitted) && password.errors?.required" class="text" style="color: red;">*Password required</p>
                           
            
 
@@ -133,16 +128,16 @@
       <!-------------------- modal ------------------>
       
     <div class="modal fade"  id="myModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-      <div class="modal-dialog" style="background-image: linear-gradient(to bottom, #66ffcc 0%, #99ff99 100%);">
-      <div class="modal-content">
-       <div class="modal-header" style="background: linear-gradient(to bottom, #33ccff 0%, #ccff33 100%);"> 
+      <div class="modal-dialog" >
+      <div class="modal-content" style="  background: linear-gradient(to bottom, #9966ff 0%, #ff0066 100%)">
+       <div class="modal-header" > 
                   
        <h1 class="text-center" style="margin-left: 70px; color: black; font-family: 'Courgette', cursive;">Register Here</h1>
      <!-- <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5> -->
     <button type="button" class="btn" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px; font-size: 25px;" data-bs-dismiss="modal" >X</button>
    </div> 
 
-     <div class="modal-body" style="background: linear-gradient(to bottom, #33ccff 0%, #ccff33 100%);">
+     <div class="modal-body">
       <div class="row">
     <div class="col-sm-5">
       <img src="../assets/register.jpeg" style="width: 200px; height: 500px;" alt="">
@@ -153,8 +148,9 @@
 
       <!------------ username------- -->
    <input type="text" id="n" class="form-control mb-2"  name="username"  required #ref1="ngModel" placeholder="Username" ngModel autocomplete="off">
-                              <div class="text-danger" *ngIf="(ref1.touched || formRef.submitted) && (ref1.errors?.required)">
-                                Username is required </div>
+                              <!-- username validation -->
+                              <div class="text" style="color: yellow;" *ngIf="(ref1.touched || formRef.submitted) && (ref1.errors?.required)">
+                               *Username is required </div>
 
 
                                 <!-- password -->
@@ -165,15 +161,15 @@
                               </div>
                   
                   <!-- Password validation -->
-                  <div class="text-danger" *ngIf="(ref2.touched || formRef.submitted)">
+                  <div class="text" style="color: yellow;" *ngIf="(ref2.touched || formRef.submitted) ">
                         <div *ngIf="ref2.errors?.required">
-                                  Please enter  password
+                                  *Please enter  password
                               </div>
                                   <div *ngIf="ref2.errors?.minlength">
-                                         Minimum length should be 6
+                                        *Minimum length should be 6
                                       </div>
                                          <div *ngIf="ref2.errors?.pattern">
-                                             Password should contain one digit and one capital letter
+                                            *Password should contain one digit and one capital letter
                         </div>
                   
                   </div>
@@ -181,9 +177,9 @@
 
                                     <!-- email -->                
                         <input type="email" class="form-control mb-2" id="email" placeholder="Email" value="email" name="email" #email="ngModel"  autocomplete="off" ngModel required>
-                        <div id="email" class="form-text">We'll never share your email with anyone else.</div>
+                        <div id="email" class="form-text" style="color: black;">We'll never share your email with anyone else.</div>
                         <!-- validation for email-->
-                         <p *ngIf="(email.touched || formRef.submitted)&&email.errors?.required" class="text-danger">*Email required</p>
+                         <p *ngIf="(email.touched || formRef.submitted)&&email.errors?.required" class="text" style="color: yellow;">*Email required</p>
 
 
 
@@ -192,7 +188,7 @@
                            <input type="number" class="form-control mb-2" id="number" value="number" placeholder="Enter your mobile number"  autocomplete="off" name="number" #number="ngModel" ngModel required>
                                                     
                            <!-- validation for Number-->
-                           <p *ngIf="(number.touched || formRef.submitted)&&number.errors?.required" class="text-danger">*Required</p>
+                           <p *ngIf="(number.touched || formRef.submitted)&&number.errors?.required" class="text" style="color: yellow;">*Mobile number is Required</p>
 
 
 
@@ -200,7 +196,7 @@
                           <!-- Address -->
                           <textarea class="form-control mb-2" id="exampleFormControlTextarea1" rows="3"  autocomplete="off" placeholder="Enter Your Address" ngModel name="address" value="address" #address="ngModel" required></textarea>
                           <!-- validation for address -->
-                          <p *ngIf="(address.touched || formRef.submitted)&&address.errors?.required" class="text-danger">*Address is required</p>
+                          <p *ngIf="(address.touched || formRef.submitted)&&address.errors?.required" class="text" style="color: yellow;">*Address is required</p>
                          
  
 
@@ -212,7 +208,7 @@
                               <input class="form-check-input" type="checkbox" value="" id="invalidCheck" name="checkbox" value="checkbox" #checkbox="ngModel" required ngModel>
                               <label class="form-check-label" for="invalidCheck" style="color: black;">I  Agree to terms and conditions </label>
 
-                              <p *ngIf="(checkbox.touched || formRef.submitted)&&checkbox.errors?.required" class="text-danger" style="font-size: 11px;">*Please check the box to register</p>
+                              <p *ngIf="(checkbox.touched || formRef.submitted)&&checkbox.errors?.required" class="text" style="font-size: 11px; color: yellow;">*Please check the box to register</p>
 
                           <!-- submit button -->
                          <button type="submit" class="btn btn-primary d-block mx-auto mt-4" >Register</button> 
@@ -264,8 +260,8 @@
         </div>
       </div>
     </nav>
-  </div>
-
+  
+</div>
 
 
 
