--- a/src/app/navbar2/navbar2.component.html
+++ b/src/app/navbar2/navbar2.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar  navbar-expand-lg  navbar-inverse navbar-light"  style="background-color: #90CCF4;font-family: 'Amita', cursive;">
+<nav class="navbar  navbar-expand-lg  navbar-inverse navbar-light"  style="background-color: yellow;font-family: 'Amita', cursive;">
     <div class="container-fluid" >
       <!-- <a class="navbar-brand" routerLink="pre"> <i>   </i></a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
