--- a/src/app/userdashboard/userdashboard.component.html
+++ b/src/app/userdashboard/userdashboard.component.html
@@ -1,9 +1,41 @@
-
-  <h6 class="text-center text-dark">Welcome,{{username}}</h6>
+<!-- <div class="container-fluid" style="background-image: url(../../assets/grocery1.jpeg); height: 100%;" > -->
   
 
 
-<div class="container-fluid">
+
+
+
+<div class="body">
+    
+ <div class="container-fluid" > 
+    
+    
+   
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+
+     <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+     <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
+    
+    
+    
+
+   
+    
+    
+
+
     <div class="row">
         <div class="col-sm-1">
             <div id="mySidenav" class="vertical-menu">
@@ -16,6 +48,16 @@
     <div class="col-sm-11">
         <router-outlet></router-outlet>
     </div>
-    </div>
+    </div> 
+
 </div>
+</div>
+
+
+ 
+
+<!-- </div> -->
 <!-- <h1 class="text-center text-primary">Welcome {{username}} </h1> -->
+
+
+<!-- <app-footer></app-footer> -->
